--- a/result.html
+++ b/result.html
@@ -26,12 +26,16 @@
         <div class="breadcrumbs">
             <div class="container">
                 <a href="index.html">home</a> > results
-
-
             </div>
         </div>
     </header>
 
+    <main>
+        <div class="container">
+            <img src="img/map.jpg" style="max-width:100%">
+        </div>
+
+    </main>
 
 
 
