--- a/result.html
+++ b/result.html
@@ -23,20 +23,71 @@
                 </ul>
             </div>
         </div>
+
+    </header>
+
+    <main>
         <div class="breadcrumbs">
             <div class="container">
                 <a href="index.html">home</a> > results
             </div>
         </div>
-    </header>
+        <div class="container info">
 
-    <main>
-        <div class="container">
             <img src="img/map.jpg" style="max-width:100%">
+
+            <div class="info-window">
+                <div class="info-header">
+                    <h1>NOVÁ KORUNA, spol. s.r.o</h1>
+                    <p>CN: 0575705</p>
+                    <p id="date">27th November 2016</p>
+                </div>
+                <div class="info-content">
+                    <div class="info-content-left">
+                    <h2>address</h2>
+                    <p>Ulice 454, Praha 4, 14100</p>
+                    <h2>file reference</h2>
+                    <p>C45787 vedená u krajského soudu</p>
+                    <h2>partners/directors</h2><p>1/3</p>
+                    <h2>more info</h2>
+                    <p>C45787 vedená u krajského soudu</p>
+                    <h2>others</h2>
+                    <p>C45787 vedená u krajského soudu</p>
+                    </div>
+
+                    <div class="info-content-right">
+                        <h2>address</h2>
+                        <p>Ulice 454, Praha 4, 14100</p>
+                        <h2>file reference</h2>
+                        <p>C45787 vedená u krajského soudu</p>
+                        <h2>partners/directors</h2><p>1/3</p>
+                        <h2>more info</h2>
+                        <p>C45787 vedená u krajského soudu</p>
+                        <h2>others</h2>
+                        <p>C45787 vedená u krajského soudu</p>
+                    </div>
+
+
+
+            </div>
+
+            </div>
         </div>
 
     </main>
-
+    <footer>
+        <div class="container">
+            <div class="contact">
+                <h1>Can we help you?</h1>
+                <p><a href="mailto:casestudy@cz.pwc.com" >casestudy@cz.pwc.com</a></p>
+                <p>+420 777 987 654</p>
+            </div>
+            <div style="text-align: center"><img src="img/icon%20rich2.svg"></div>
+            <div class="case-study">
+                <p>Case study for PwC</p>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
