added responsive css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
             <head>
                 <title>PwC case study - company finder</title>
                 <link rel="stylesheet" href="css/style.css">
-                <script rel="js/script.js"></script>
+                <link rel="stylesheet" href="css/responsive.css">
+                
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+                <script src="js/script.js"></script>
                 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
 
@@ -19,12 +22,16 @@
                         <img id="logo-icon" src="img/icon%20rich.svg" alt="company logo" />
                         <div id="logo-text"><h1>Company <br> finder</h1></div>
                     </div></a>
+                    <a href="#" ><img id="menu-burger" src="img/menu-burger.png"></a>
                     <div class="menu">
+
                         <ul>
                             <a href="#"><li>responsibility</li></a>
                             <a href="#"><li>about us</li></a>
                         </ul>
+
                     </div>
+                    
         </div>
     </header>
 
@@ -44,7 +51,7 @@
         <div class="left-form">
             <h1>Do you know CN?</h1>
             <div><input type="text" placeholder="company no."><a href="#" ><img src="img/magnifier.svg" id="lupka" alt="small magnifier"></a><br /></div>
-            <img src="img/artwork.svg" alt="artwork building" style="max-width: 100%"/>
+            <img id="artwork" src="img/artwork.svg" alt="artwork building" style="max-width: 100%"/>
         </div>
 
         <div class="right-form">
