--- a/result.html
+++ b/result.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Results</title>
+    <title>PwC case study - company finder</title>
     <link rel="stylesheet" href="css/style.css">
-    <script rel="js/script.js"></script>
+    <link rel="stylesheet" href="css/responsive.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+
+
+
 
 </head>
 <body>
@@ -16,14 +21,17 @@
                 <img id="logo-icon" src="img/icon%20rich.svg" alt="company logo" />
                 <div id="logo-text"><h1>Company <br> finder</h1></div>
             </div></a>
+            <a href="#"> <img id="menu-burger" src="img/menu-burger.png"></a>
             <div class="menu">
+
                 <ul>
                     <a href="#"><li>responsibility</li></a>
                     <a href="#"><li>about us</li></a>
                 </ul>
-            </div>
-        </div>
 
+            </div>
+
+        </div>
     </header>
 
     <main>
@@ -66,12 +74,13 @@
                         <h2>others</h2>
                         <p>C45787 vedená u krajského soudu</p>
                     </div>
-
-
-
+                </div>
             </div>
 
-            </div>
+
+            <img src="img/icon%20map%20pin.svg" id="map-pin">
+
+
         </div>
 
     </main>
