change responsive css for result.html

--- a/result.html
+++ b/result.html
@@ -42,7 +42,7 @@
         </div>
         <div class="container info">
 
-            <img src="img/map.jpg" style="max-width:100%">
+
 
             <div class="info-window">
                 <div class="info-header">
@@ -63,6 +63,8 @@
                     <p>C45787 vedená u krajského soudu</p>
                     </div>
 
+                    <a href="#" ><button id="more-details">MORE DETAILS</button></a>
+
                     <div class="info-content-right">
                         <h2>address</h2>
                         <p>Ulice 454, Praha 4, 14100</p>
@@ -75,9 +77,11 @@
                         <p>C45787 vedená u krajského soudu</p>
                     </div>
                 </div>
+
+
             </div>
 
-
+            <div id="map"><img src="img/map.jpg"></div>
             <img src="img/icon%20map%20pin.svg" id="map-pin">
 
 
