edit responzive, added about-us.html and responsibility.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <div class="menu">
 
                         <ul>
-                            <a href="#"><li>responsibility</li></a>
-                            <a href="#"><li>about us</li></a>
+                            <a href="responsibility.html"><li>responsibility</li></a>
+                            <a href="about-us.html"><li>about us</li></a>
                         </ul>
 
                     </div>
