--- a/result.html
+++ b/result.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
+    <meta charset="UTF-8">
     <title>PwC case study - company finder</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -25,8 +26,8 @@
             <div class="menu">
 
                 <ul>
-                    <a href="#"><li>responsibility</li></a>
-                    <a href="#"><li>about us</li></a>
+                    <a href="responsibility.html"><li>responsibility</li></a>
+                    <a href="about-us.html"><li>about us</li></a>
                 </ul>
 
             </div>
@@ -37,7 +38,7 @@
     <main>
         <div class="breadcrumbs">
             <div class="container">
-                <a href="index.html">home</a> > results
+                <span><a href="index.html">home</a> > results</span>
             </div>
         </div>
         <div class="container info">
@@ -46,6 +47,7 @@
 
             <div class="info-window">
                 <div class="info-header">
+
                     <h1>NOVÁ KORUNA, spol. s.r.o</h1>
                     <p>CN: 0575705</p>
                     <p id="date">27th November 2016</p>
@@ -63,7 +65,8 @@
                     <p>C45787 vedená u krajského soudu</p>
                     </div>
 
-                    <a href="#" ><button id="more-details">MORE DETAILS</button></a>
+
+
 
                     <div class="info-content-right">
                         <h2>address</h2>
@@ -76,14 +79,16 @@
                         <h2>others</h2>
                         <p>C45787 vedená u krajského soudu</p>
                     </div>
+
+                    <span><img src="img/arrow.png"><button id="more-details">MORE DETAILS</button></span>
                 </div>
 
 
             </div>
 
-            <div id="map"><img src="img/map.jpg"></div>
+            <div id="map"><img src="img/map.jpg">
             <img src="img/icon%20map%20pin.svg" id="map-pin">
-
+            </div>
 
         </div>
 
