final editing, version 1.0

--- a/result.html
+++ b/result.html
@@ -80,7 +80,7 @@
                         <p>C45787 vedená u krajského soudu</p>
                     </div>
 
-                    <span><img src="img/arrow.png"><button id="more-details">MORE DETAILS</button></span>
+                    <span><button id="more-details">MORE DETAILS</button></span>
                 </div>
 
 
